--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-  
+
+<!-- <img src="hongkongcrop1.png" alt=""id="hk1"> -->
+
+<p id="hk1">dkfjdkFJksdljfdkdlkfjdkslFJdklmFJVNKASLFVNJ  20</p>
+<img src="hongkongcrop2.png" alt=""id="hk2">
+
+<img src="hongkongcrop3.png" alt=""id="hk3">
+
+<img src="hongkongcrop4.png" alt=""id="hk4">
 
 </body></html>
